before-deciding-one-theme

--- a/_theme-colors.scss
+++ b/_theme-colors.scss
@@ -75,7 +75,7 @@ $_palettes: (
     90: #e4e2e1,
     95: #f2f0f0,
     98: #fbf9f8,
-    99: #fefcfb,
+    99: #fbfdfe,
     100: #ffffff,
     4: #0e0e0e,
     6: #131314,
