--- a/src/app/shared/components/stats-card/stats-card.component.html
+++ b/src/app/shared/components/stats-card/stats-card.component.html
@@ -1,4 +1,4 @@
-<div class="stats-card" [ngClass]="'stats-card-' + cardColor">
+<div class="stats-card dashboard-card" [ngClass]="'stats-card-' + cardColor">
   <div class="stats-card-icon">
     <mat-icon>{{ icon }}</mat-icon>
   </div>
